name:                f2js
version:             0.1.0
synopsis:            Compiler for a lazy functional language to JS
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  rts/rts.js

library
  exposed-modules:     Language.F2JS
  other-modules:       Language.F2JS.AST
                     , Language.F2JS.Closure
                     , Language.F2JS.CodeGen
                     , Language.F2JS.Lift
                     , Language.F2JS.Pipeline
                     , Language.F2JS.STGify
                     , Language.F2JS.Saturate
                     , Language.F2JS.Target
                     , Language.F2JS.Util

  build-depends:       base >=4.0 && <5.0
                     , js-good-parts
                     , monad-gen
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
