name:                f2js
version:             0.1.0
synopsis:            Compiler for a lazy functional language to JS
description:         Compiler for a lazy functional language to JS
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  rts/rts.js
source-repository head
  type:                git
  location:            https://github.com/jozefg/f2js
library
  exposed-modules:     Language.F2JS
  other-modules:       Language.F2JS.AST
                     , Language.F2JS.Closure
                     , Language.F2JS.CodeGen
                     , Language.F2JS.DSL
                     , Language.F2JS.Lift
                     , Language.F2JS.MakeMain
                     , Language.F2JS.Pipeline
                     , Language.F2JS.STGify
                     , Language.F2JS.Saturate
                     , Language.F2JS.Target
                     , Language.F2JS.Util

  build-depends:       base >=4.0 && <5.0
                     , containers
                     , directory >= 1.2
                     , js-good-parts
                     , monad-gen
  hs-source-dirs:      src
  default-language:    Haskell2010
